@@ -7,6 +7,8 @@ Milestone 100
   * Skia now requires C++17 and the corresponding standard library (or newer).
   * Skia on iOS now requires iOS 11 to build; earlier versions of iOS do not support C++17.
   * The skstd::string_view class has been replaced with the C++17 native std::string_view.
+  * Added SkSurface::resolveMSAA api to force Skia to resolve MSAA draws. Useful for when
+    Skia wraps a clients texture as the resolve target.
 
 * * *
 
